[gd_scene load_steps=25 format=2]

[ext_resource path="res://Assets/Enemies/TheDude/SmokeCloudMoving.png" type="Texture" id=1]
[ext_resource path="res://Assets/Enemies/TheDude/SmokeCloudGrowing.png" type="Texture" id=2]
[ext_resource path="res://Assets/Enemies/TheDude/SmokeCloudDispersing.png" type="Texture" id=3]
[ext_resource path="res://src/CollisionTemplates/HitBox.tscn" type="PackedScene" id=4]
[ext_resource path="res://src/Enemies/TheDude/Projectiles/SmokeCloud.gd" type="Script" id=5]

[sub_resource type="AtlasTexture" id=20]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=21]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=22]
flags = 4
atlas = ExtResource( 1 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=23]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=24]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=25]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=26]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=27]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 384, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=28]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 480, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=29]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 576, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=30]
flags = 4
atlas = ExtResource( 2 )
region = Rect2( 672, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=31]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 0, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=32]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 96, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=33]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 192, 0, 96, 96 )

[sub_resource type="AtlasTexture" id=34]
flags = 4
atlas = ExtResource( 3 )
region = Rect2( 288, 0, 96, 96 )

[sub_resource type="SpriteFrames" id=16]
animations = [ {
"frames": [ SubResource( 20 ), SubResource( 21 ), SubResource( 22 ) ],
"loop": true,
"name": "Move",
"speed": 5.0
}, {
"frames": [ SubResource( 23 ), SubResource( 24 ), SubResource( 25 ), SubResource( 26 ), SubResource( 27 ), SubResource( 28 ), SubResource( 29 ), SubResource( 30 ) ],
"loop": false,
"name": "Grow",
"speed": 8.0
}, {
"frames": [ SubResource( 31 ), SubResource( 32 ), SubResource( 33 ), SubResource( 34 ) ],
"loop": false,
"name": "Disperse",
"speed": 10.0
} ]

[sub_resource type="CircleShape2D" id=17]
radius = 11.5762

[sub_resource type="CapsuleShape2D" id=18]
radius = 18.4899
height = 17.1446

[sub_resource type="CapsuleShape2D" id=19]
radius = 18.0955
height = 50.9199

[node name="SmokeCloud" type="KinematicBody2D"]
collision_layer = 16
collision_mask = 3
script = ExtResource( 5 )

[node name="AnimatedSprite" type="AnimatedSprite" parent="."]
frames = SubResource( 16 )
animation = "Grow"
frame = 6

[node name="SmallHitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" parent="SmallHitBox" index="0"]
position = Vector2( 32.9865, 30.953 )
shape = SubResource( 17 )
disabled = true

[node name="MediumHitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" parent="MediumHitBox" index="0"]
position = Vector2( 23.0453, 16.0414 )
rotation = 1.5708
shape = SubResource( 18 )
disabled = true

[node name="FullHitBox" parent="." instance=ExtResource( 4 )]
collision_layer = 16
collision_mask = 3

[node name="CollisionShape2D" parent="FullHitBox" index="0"]
position = Vector2( 0, -2.31689 )
rotation = 1.5708
shape = SubResource( 19 )
disabled = true
[connection signal="animation_finished" from="AnimatedSprite" to="." method="_on_AnimatedSprite_animation_finished"]
[connection signal="frame_changed" from="AnimatedSprite" to="." method="_on_AnimatedSprite_frame_changed"]
[connection signal="body_entered" from="SmallHitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="MediumHitBox" to="." method="_on_HitBox_body_entered"]
[connection signal="body_entered" from="FullHitBox" to="." method="_on_HitBox_body_entered"]

[editable path="SmallHitBox"]

[editable path="MediumHitBox"]

[editable path="FullHitBox"]
